--- a/FLX_homework_2/homework/css/style.css
+++ b/FLX_homework_2/homework/css/style.css
@@ -1,148 +1,140 @@
-@media screen {
-  section {
-    position: relative;
+section {
+  position: relative;
+}
+section:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 15rem;
+  height: 7rem;
+  background-color: #87cefa;
+  clip-path: polygon(0 0, 0 28%, 100% 0);
+}
+h2 + p {
+  font-style: italic;
+}
+p:first-letter {
+  color: #87cefa;
+  font-size: 30px;
+}
+.gallery-container .box.box-bg:hover,
+.gallery-container .box.box-bg h2:hover {
+  background-color: #87cefa;
+  color: #fff;
+  font-weight: 400;
+  letter-spacing: -1px;
+  cursor: pointer;
+}
+.tm-banner {
+  border: 30px solid #eee;
+  padding: 0;
+}
+.tm-content-box,
+.tm-sidebar,
+.blocks {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+}
+.blocks .tm-content-box {
+  box-shadow: none;
+}
+#tmCarousel .flex-item .tm-section-title {
+  color: #dcdcdc;
+  letter-spacing: 5px;
+}
+.tm-content-box.flex-2-col {
+  display: flex;
+  align-items: center;
+}
+.tm-content-box.flex-2-col .tm-section-description {
+  line-height: 1.9rem;
+  text-indent: 1.6rem;
+}
+.tm-content-box .padding-medium ol a {
+  color: #000;
+}
+.tm-content-box .padding-medium ol a:visited {
+  text-decoration: underline;
+}
+.tm-content-box .padding-medium ol a:hover {
+  color: #31b0d5;
+  text-decoration: underline double;
+}
+.tm-content-box .padding-medium ol li:first-child::after,
+.tm-content-box .padding-medium ol li:nth-child(3)::after {
+  content: "New";
+  color: #ff0000;
+  font-size: 0.7rem;
+  vertical-align: top;
+}
+.blocks .gallery-container .box-work {
+  padding: 0.5rem;
+}
+.boxes.gallery-container li:nth-child(even) {
+  background-color: #eee;
+}
+.tm-nav-item:hover {
+  background-color: #eee;
+}
+.mandatory-field::after {
+  content: "*";
+  color: #ff0000;
+  font-weight: 600;
+}
+.contact-form {
+  text-align: right;
+}
+#contact .submit-btn {
+  background-color: #fff;
+  color: #87cefa;
+  border: 1px solid #87cefa;
+  border-radius: 0;
+  padding: 1rem 3rem;
+}
+#contact .submit-btn:hover {
+  background-color: #87cefa;
+  color: #fff;
+  border: 1px solid #43b4f9;
+}
+.gallery-container .box.box-bg,
+.gallery-container .box.box-bg h2,
+.tm-nav-item,
+#contact .submit-btn {
+  transition: background-color 0.5s ease-out, color 0.5s ease-out;
+}
+
+@media print {
+  #about,
+  .tm-sidebar,
+  section:not(:first-of-type) {
+    display: none;
   }
   section:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1;
-    width: 15rem;
-    height: 7rem;
-    background-color: #87cefa;
-    clip-path: polygon(0 0, 0 28%, 100% 0);
-    -webkit-clip-path: polygon(0 0, 0 28%, 100% 0);
-  }
-  h2 + p {
-    font-style: italic;
-  }
-  p:first-letter {
-    color: #87cefa;
-    font-size: 30px;
-  }
-  .gallery-container .box.box-bg:hover,
-  .gallery-container .box.box-bg h2:hover {
-    background-color: #87cefa;
-    color: #fff;
-    font-weight: 400;
-    letter-spacing: -1px;
-    cursor: pointer;
+    content: none;
   }
   .tm-banner {
-    border: 30px solid #eee;
+    border: none;
+  }
+  .padding-medium {
     padding: 0;
-  }
-  .tm-content-box,
-  .tm-sidebar,
-  .blocks {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
-  }
-  .blocks .tm-content-box {
-    box-shadow: none;
-  }
-  #tmCarousel .flex-item .tm-section-title {
-    color: #dcdcdc;
-    letter-spacing: 5px;
   }
   .tm-content-box.flex-2-col {
     display: flex;
     align-items: center;
-  }
-  .tm-content-box.flex-2-col .tm-section-description {
-    line-height: 1.9rem;
-    text-indent: 1.6rem;
-  }
-  .tm-content-box .padding-medium ol a {
-    color: #000;
-  }
-  .tm-content-box .padding-medium ol a:visited {
-    text-decoration: underline;
-  }
-  .tm-content-box .padding-medium ol a:hover {
-    color: #31b0d5;
-    text-decoration: underline double;
-  }
-  .tm-content-box .padding-medium ol li:first-child::after,
-  .tm-content-box .padding-medium ol li:nth-child(3)::after {
-    content: "New";
-    color: #ff0000;
-    font-size: 0.7rem;
-    vertical-align: top;
-  }
-  .blocks .gallery-container .box-work {
-    padding: 0.5rem;
-  }
-  .boxes.gallery-container li:nth-child(even) {
-    background-color: #eee;
-  }
-  .tm-nav-item:hover {
-    background-color: #eee;
-  }
-  .mandatory-field::after {
-    content: "*";
-    color: #ff0000;
-    font-weight: 600;
-  }
-  .contact-form {
-    text-align: right;
-  }
-  #contact .submit-btn {
-    background-color: #fff;
-    color: #87cefa;
-    border: 1px solid #87cefa;
-    border-radius: 0;
-    padding: 1rem 3rem;
-  }
-  #contact .submit-btn:hover {
-    background-color: #87cefa;
-    color: #fff;
-    border: 1px solid #43b4f9;
-  }
-  .gallery-container .box.box-bg,
-  .gallery-container .box.box-bg h2,
-  .tm-nav-item,
-  #contact .submit-btn {
-    transition: background-color 0.5s ease-out, color 0.5s ease-out;
-  }
-}
-
-@media print {
-  .tm-sidebar,
-  #about,
-  #ideas,
-  #contact,
-  .heading,
-  .blocks,
-  .img-fluid {
-    display: none;
-  }
-  .padding-medium {
-    padding: 0 55px 20px 55px;
-  }
-  .tm-content-box {
-    margin-bottom: 0;
-  }
-  section > .tm-content-box {
-    display: flex;
-    align-items: center;
+    justify-content: space-evenly;
   }
   .tm-team-description-container {
-    flex-basis: 100rem;
-    max-width: 100%;
+    flex-basis: 17rem;
+  }
+  .tm-team-description-container.flex-item + .flex-item {
+    flex-basis: 10rem;
   }
   h2.tm-section-title {
     color: #0000ff;
   }
-  p::first-letter {
-    color: #87cefa;
-    font-size: 2rem;
-  }
   .tm-team-description-container .tm-section-description {
     line-height: 2rem;
     text-indent: 1.7rem;
-  }
-  .tm-section-title + p {
-    font-style: italic;
   }
 }
