--- a/FLX_homework_2/homework/css/style.css
+++ b/FLX_homework_2/homework/css/style.css
@@ -107,6 +107,9 @@ p:first-letter {
 @media print {
   section:not(:first-of-type),
   #about,
+  .tm-sidebar {
+    display: none;
+  }
   section:before {
     content: none;
   }
