--- a/FLX_homework_3/homework/scss/_main.scss
+++ b/FLX_homework_3/homework/scss/_main.scss
@@ -150,7 +150,7 @@ main {
     &:focus {
       outline: none;
     }
-    &::-webkit-input-placeholder {
+    &::placeholder {
       @include text($size: 1.2rem, $weight: 200, $color: $fontColorPrimary);
     }
   }
@@ -249,6 +249,7 @@ article {
       display: flex;
       flex-direction: column;
       textarea {
+        max-height: 16rem;
         @include text($size: 2rem);
       }
     }
