--- a/FLX_homework_4/homework/css/style.css
+++ b/FLX_homework_4/homework/css/style.css
@@ -179,12 +179,12 @@ html {
 .posts {
   background: #ffff;
   padding: 3rem 3rem 6rem 3rem;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(10rem, 35rem));
+  justify-content: center;
+  grid-gap: 10rem;
 }
 .posts__item {
-  flex: 0 0 22%;
   padding: 1.4rem;
   box-shadow: 0 1px 1px 1px #9e9e9e;
   display: flex;
