adusted navbar on tablets, added utilities

--- a/FLX_homework_13/homework/styles/styles.less
+++ b/FLX_homework_13/homework/styles/styles.less
@@ -1,5 +1,6 @@
 @import "bootstrap.min.css";
 @import "variables";
+@import "utilities";
 
 * {
   margin: 0;
@@ -44,40 +45,12 @@ h3 {
   }
 }
 
-.class-1 {
-  border: 1px solid @red;
-  .card-title {
-    background-color: @red;
-  }
-}
-
-.class-2 {
-  border: 1px solid @blue;
-  .card-title {
-    background-color: @blue;
-  }
-}
-
-.class-3 {
-  border: 1px solid @orange;
-  .card-title {
-    background-color: @orange;
-  }
-}
-
-.class-4 {
-  border: 1px solid @green;
-  .card-title {
-    background-color: @green;
-  }
-}
-
 .copyright {
   background-color: #666;
 }
 
 @media (min-width: 767.98px) and (max-width: 991.98px) {
-  .class-desc {
+  .card-title {
     font-size: 0.8rem;
   }
 }
