--- a/FLX_homework_13/homework/styles/styles.less
+++ b/FLX_homework_13/homework/styles/styles.less
@@ -46,7 +46,7 @@ h3 {
 }
 
 .copyright {
-  background-color: #666;
+  background-color: @grey;
 }
 
 @media (min-width: 767.98px) and (max-width: 991.98px) {
