--- a/FLX_homework_18/homework/assets/styles.css
+++ b/FLX_homework_18/homework/assets/styles.css
@@ -16,7 +16,6 @@ body {
   background-color: #3a8df8;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
 }
-
 img {
   max-width: 100%;
   height: auto;
@@ -30,7 +29,6 @@ textarea:focus,
 button:focus {
   outline: none;
 }
-
 .header {
   display: flex;
   align-items: center;
@@ -80,6 +78,7 @@ button:focus {
   background-color: #f6f7fc;
   display: flex;
   position: relative;
+  min-height: 86.7rem;
 }
 .main__avatar {
   position: relative;
@@ -103,13 +102,11 @@ button:focus {
   background-color: #fff;
   box-shadow: inset 0 0 3px #b7bed2;
 }
-
 .change-user {
   display: flex;
   justify-content: space-evenly;
   margin-top: auto;
 }
-
 .main__avatar--info {
   display: flex;
   flex-direction: column;
@@ -300,7 +297,6 @@ button:focus {
   left: auto;
   padding: 0.5rem;
 }
-
 .loader {
   border: 16px solid #b7bed2;
   border-top: 16px solid #0067ff;
