--- a/FLX_homework_18/homework/assets/styles.css
+++ b/FLX_homework_18/homework/assets/styles.css
@@ -246,24 +246,35 @@ button:focus {
   cursor: pointer;
   transition: all 0.3s;
 }
-.modal {
-  position: absolute;
+#modal {
+  position: fixed;
   background-color: rgba(183, 190, 210, 0.4);
   padding: 2rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  display: none;
+  z-index: 3;
+ 
+}
+.modal__closed {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  transition: all .3s;
+}
+.modal__open {
   width: 100%;
   height: 100%;
-  z-index: 3;
+  opacity: 1;
+  transition: all .3s;
 }
 .modal__form {
   padding: 2rem;
-  width: 35rem;
+  width: 55rem;
   margin: 0 auto;
   border: 1px solid #3a8df8;
   background-color: #b7bed2;
+  max-width: 100%;
 }
 .modal__form input {
   width: 100%;
@@ -305,7 +316,19 @@ button:focus {
   height: 4rem;
   animation: spin 2s linear infinite;
 }
-
+.body__loader {
+  border: 16px solid #b7bed2;
+  border-top: 16px solid #0067ff;
+  border-radius: 50%;
+  width: 15rem;
+  height: 15rem;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 35%;
+  left: 46%;
+  z-index: 10;
+  display: none;
+}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
