--- a/FLX_homework_22/FLX-angular-homework/src/app/components/employee-instance/employee-instance.component.html
+++ b/FLX_homework_22/FLX-angular-homework/src/app/components/employee-instance/employee-instance.component.html
@@ -4,22 +4,19 @@
     <button
       (click)="onDelete(employee)"
       type="text"
-      class="employee__edit--remove"
-    >
+      class="employee__edit--remove">
       <i class="fa fa-trash-o"></i>
     </button>
     <button
       type="text"
       class="employee__edit--edit"
-      [routerLink]="['/edit', employee.id]"
-    >
+      [routerLink]="['/edit', employee.id]">
       <i class="fa fa-pencil"></i>
     </button>
     <button
       type="text"
       class="employee__edit--details"
-      [routerLink]="['/employee', employee.id]"
-    >
+      [routerLink]="['/employee', employee.id]">
       <i class="fa fa-arrow-circle-right"></i>
     </button>
   </div>
