--- a/FLX_homework_22/FLX-angular-homework/src/app/components/edit-employee/edit-employee.component.html
+++ b/FLX_homework_22/FLX-angular-homework/src/app/components/edit-employee/edit-employee.component.html
@@ -15,13 +15,10 @@
       required
       maxlength="50"
       #firstNameControl="ngModel"
-      [class.erroneous]="firstNameControl.invalid && firstNameControl.touched"
-    />
-    <span
-      class="invalid-error"
-      *ngIf="firstNameControl.invalid && firstNameControl.touched"
-      >First name invalid</span
-    >
+      [class.erroneous]="firstNameControl.invalid && firstNameControl.touched"/>
+    <span class="invalid-error"
+      *ngIf="firstNameControl.invalid && firstNameControl.touched">
+  	First name invalid</span>
     <label for="lastName">Last Name:</label>
     <input
       class="employee-data lastName"
@@ -33,21 +30,17 @@
       required
       maxlength="50"
       #lastNameControl="ngModel"
-      [class.erroneous]="lastNameControl.invalid && lastNameControl.touched"
-    />
-    <span
-      class="invalid-error"
-      *ngIf="lastNameControl.invalid && lastNameControl.touched"
-      >Last name invalid</span
-    >
+      [class.erroneous]="lastNameControl.invalid && lastNameControl.touched"/>
+    <span class="invalid-error"
+      *ngIf="lastNameControl.invalid && lastNameControl.touched">
+  		Last name invalid</span>
     <label for="city">City:</label>
     <select
       class="employee-data city"
       name="city"
       id="city"
       [(ngModel)]="city"
-      required
-    >
+      required>
       <option value="lviv">Lviv</option>
       <option value="london" [ngValue]="london">London</option>
       <option value="tokyo">Tokyo</option>
@@ -66,14 +59,11 @@
       #descriptionControl="ngModel"
       [class.erroneous]="
         descriptionControl.invalid && descriptionControl.touched
-      "
-    >
+      ">
     </textarea>
-    <span
-      class="invalid-error"
-      *ngIf="descriptionControl.invalid && descriptionControl.touched"
-      >Description should have at least 10 characters.</span
-    >
+    <span class="invalid-error"
+      *ngIf="descriptionControl.invalid && descriptionControl.touched">
+  	Description should have at least 10 characters.</span>
   </div>
   <div class="add-employee__options">
     <label for="age">Age: {{ age }}</label>
@@ -87,8 +77,7 @@
       step="1"
       class="employee-data age"
       required
-      #ageControl="ngModel"
-    />
+      #ageControl="ngModel"/>
     <p class="gender">Gender:</p>
     <label>
       <input
@@ -97,8 +86,7 @@
         id="male"
         name="male"
         value="0"
-        class="employee-data male"
-      />
+        class="employee-data male"/>
       <span class="styled-radio"></span>
       Male
     </label>
@@ -109,8 +97,7 @@
         id="female"
         name="female"
         value="1"
-        class="employee-data female"
-      />
+        class="employee-data female"/>
       <span class="styled-radio"></span>
       Female
     </label>
@@ -122,8 +109,7 @@
         name="disclosed"
         value="2"
         class="employee-data female"
-        checked
-      />
+        checked/>
       <span class="styled-radio"></span>
       Not disclosed
     </label>
@@ -131,8 +117,7 @@
       class="employee-submit"
       type="submit"
       [disabled]="employeeForm.invalid"
-      [class.disabled]="employeeForm.invalid"
-    >
+      [class.disabled]="employeeForm.invalid">
       <i class="fa fa-check"></i>
     </button>
   </div>
