--- a/FLX_homework_22/FLX-angular-homework/src/app/components/header/header.component.html
+++ b/FLX_homework_22/FLX-angular-homework/src/app/components/header/header.component.html
@@ -9,9 +9,7 @@
   *ngIf="
     router.url !== '/employees' &&
     router.url !== '/employee/create' &&
-    !router.url.includes('edit')
-  "
->
+    !router.url.includes('edit')">
   View employee details
 </h2>
 <h2 class="main__header edit" *ngIf="router.url.includes('edit')">
