--- a/FLX_homework_22/FLX-angular-homework/src/app/components/view-employee/view-employee.component.html
+++ b/FLX_homework_22/FLX-angular-homework/src/app/components/view-employee/view-employee.component.html
@@ -27,8 +27,7 @@
   <button
     type="text"
     class="edit-controls__edit"
-    [routerLink]="['/edit', employee[0].id]"
-  >
+    [routerLink]="['/edit', employee[0].id]">
     <i class="fa fa-pencil"></i>
   </button>
   <button type="text" class="edit-controls__remove" (click)="onDelete()">
