eslint related bug fixes

--- a/FLX_homework_22/FLX-angular-homework/src/app/components/employees/employees.component.html
+++ b/FLX_homework_22/FLX-angular-homework/src/app/components/employees/employees.component.html
@@ -3,7 +3,8 @@
     <div *ngFor="let employee of (employees | employeeSearch: searchTerm)">
       <app-employee-instance
         [employee]="employee"
-        (deleteEmployee)="deleteEmployee($event)">
+        (deleteEmployee)="deleteEmployee($event)"
+      >
       </app-employee-instance>
     </div>
   </div>
@@ -12,11 +13,13 @@
       class="employees__search--field"
       type="text"
       placeholder="Search..."
-      [(ngModel)]="searchTerm"/>
+      [(ngModel)]="searchTerm"
+    />
     <button
       type="button"
       class="employees__search--add"
-      [routerLink]="['/employee/create']">
+      [routerLink]="['/employee/create']"
+    >
       <i class="fa fa-plus-circle"></i>
     </button>
   </div>
